<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:context=".ui.MainPageFragment">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<com.google.android.material.appbar.AppBarLayout
				android:id="@+id/app_bar_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:liftOnScroll="true">

				<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<TextView
						android:id="@+id/text_empty"
						style="@style/HeaderTextStyle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_alignParentStart="true"
						android:layout_alignParentTop="true"
						android:visibility="invisible"
						android:layout_marginStart="@dimen/start_page_elements_start_margin"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent" />

					<TextView
						android:id="@+id/text_product_search"
						style="@style/HeaderTextStyle"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_below="@+id/text_empty"
						android:layout_alignParentStart="true"
						android:layout_marginStart="@dimen/start_page_elements_start_margin"
						android:text="@string/product_search"
						android:textColor="@color/white"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/text_empty" />

					<com.google.android.material.textfield.TextInputLayout
						android:id="@+id/text_input_layout_search_product"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_below="@+id/text_product_search"
						android:layout_alignParentStart="true"
						android:layout_marginStart="@dimen/start_page_elements_start_margin"
						android:layout_marginEnd="@dimen/start_page_elements_top_margin"
						android:layout_toStartOf="@+id/button_barcode"
						android:hint="@string/hint_search"
						app:boxCornerRadiusBottomEnd="5dp"
						app:boxCornerRadiusBottomStart="5dp"
						app:boxCornerRadiusTopEnd="5dp"
						app:boxCornerRadiusTopStart="5dp"
						app:boxStrokeWidth="0dp"
						app:boxStrokeWidthFocused="0dp"
						app:endIconDrawable="@drawable/ic_search_edit_text"
						app:endIconMode="custom"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toStartOf="@+id/button_barcode"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/text_product_search">

						<com.google.android.material.textfield.TextInputEditText
							android:layout_width="match_parent"
							android:layout_height="wrap_content" />

					</com.google.android.material.textfield.TextInputLayout>


					<ImageButton
						android:id="@+id/button_barcode"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_below="@+id/text_product_search"
						android:layout_alignParentEnd="true"
						android:layout_alignParentBottom="true"
						android:layout_marginTop="18dp"
						android:layout_marginEnd="@dimen/start_page_elements_start_margin"
						android:backgroundTint="@color/white"
						android:padding="20dp"
						android:layout_marginBottom="@dimen/start_page_elements_start_margin"
						android:src="@drawable/ic_barcode"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/text_product_search" />

				</androidx.constraintlayout.widget.ConstraintLayout>

			</com.google.android.material.appbar.AppBarLayout>

			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/category_scroll"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
				tools:listitem="@layout/item_category" />

			<TextView
				android:id="@+id/text_recently_viewed"
				style="@style/StandardTextStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/recently_viewed"
				android:layout_marginStart="@dimen/start_page_elements_start_margin"
				android:layout_marginVertical="@dimen/start_page_elements_start_margin"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/category_scroll" />

			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/recently_viewed_scroll"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
				app:layout_constraintTop_toBottomOf="@+id/text_recently_viewed"
				tools:listitem="@layout/item_product" />

			<TextView
				android:id="@+id/text_limited_offer"
				style="@style/StandardTextStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/start_page_elements_start_margin"
				android:layout_marginVertical="@dimen/start_page_elements_start_margin"
				android:text="@string/limited_offer"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/recently_viewed_scroll" />

			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/limited_offer_scroll"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/text_limited_offer"
				tools:listitem="@layout/item_product" />

			<TextView
				android:id="@+id/text_best_price"
				style="@style/StandardTextStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/best_price"
				android:layout_marginStart="@dimen/start_page_elements_start_margin"
				android:layout_marginVertical="@dimen/start_page_elements_start_margin"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/limited_offer_scroll" />

			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/best_price_scroll"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/text_best_price"
				tools:listitem="@layout/item_product" />

		</androidx.constraintlayout.widget.ConstraintLayout>

	</ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>